--- a/cyfile/pom.xml
+++ b/cyfile/pom.xml
@@ -157,7 +157,11 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.2.2</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.mybatis.generator</groupId>
+		    <artifactId>mybatis-generator-core</artifactId>
+		    <version>1.3.6</version>
+		</dependency>
 
 		<!-- 依赖的WEB类库 -->
 		<dependency>
