--- a/cyfile/pom.xml
+++ b/cyfile/pom.xml
@@ -158,9 +158,9 @@
 			<version>1.2.2</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.mybatis.generator</groupId>
-		    <artifactId>mybatis-generator-core</artifactId>
-		    <version>1.3.6</version>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-core</artifactId>
+			<version>1.3.6</version>
 		</dependency>
 
 		<!-- 依赖的WEB类库 -->
@@ -239,6 +239,14 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<!-- rabbitmq   -->
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+
+
 
 		<!-- cglib与asm -->
 		<dependency>
