--- a/cyfile/src/main/resources/jdbc.properties
+++ b/cyfile/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/oa
 jdbc.username=root
-jdbc.password=caoheshan
+jdbc.password=111111
 
 druid.initialSize = 5
 druid.maxActive = 100
